# codex-django-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
0.x/: 404.html  index.html  objects.inv  sitemap.xml
0.x/changelog/: index.html
0.x/en/: index.html
0.x/en/api/cli/: index.html
0.x/en/api/internal/cli/: index.html
0.x/en/architecture/cli/: index.html
0.x/en/getting-started/: index.html
0.x/en/guides/blueprints-and-scaffolding/: index.html
0.x/en/guides/installation-modes/: index.html
0.x/en/guides/runtime-vs-cli/: index.html
0.x/evolution/roadmap/: index.html
0.x/javascripts/: mermaid.js
0.x/release-prep-plan/: index.html
0.x/ru/: index.html
0.x/ru/architecture/cli/: index.html
0.x/ru/getting-started/: index.html
0.x/ru/guides/blueprints-and-scaffolding/: index.html
0.x/ru/guides/installation-modes/: index.html
0.x/ru/guides/runtime-vs-cli/: index.html
0.x/search/: search_index.json
0.x/stylesheets/: extra.css
docs/: index.md  release-prep-plan.md
docs/en/: README.md  getting-started.md
docs/en/api/: cli.md
docs/en/api/internal/: cli.md
docs/en/architecture/cli/: README.md  blueprints.md  commands.md  engine.md  entrypoints.md  module.md  project-output.md
docs/en/guides/: blueprints-and-scaffolding.md  installation-modes.md  runtime-vs-cli.md
docs/evolution/: roadmap.md
docs/ru/: README.md  getting-started.md
docs/ru/architecture/cli/: README.md  blueprints.md  commands.md  engine.md  entrypoints.md  module.md  project-output.md
docs/ru/guides/: blueprints-and-scaffolding.md  installation-modes.md  runtime-vs-cli.md
src/codex_django_cli/: __init__.py  engine.py  main.py  prompts.py  utils.py
src/codex_django_cli/blueprints/cabinet/: adapters.py.j2  apps.py.j2  auth_urls.py.j2  booking_bridge.py.j2  context_processors.py.j2  urls.py.j2
src/codex_django_cli/blueprints/project/: manage.py.j2
src/codex_django_cli/blueprints/repo/: .env.example.j2  .gitignore  README.md.j2  pyproject.toml.j2
src/codex_django_cli/commands/: __init__.py  add_app.py  booking.py  client_cabinet.py  deploy.py  init.py  install.py  notifications.py  quality.py  repo.py
src/codex_django_cli/dev/: __init__.py  project_tree.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/e2e/cli/: test_init_e2e.py  test_install_chains_e2e.py
tests/integration/: __init__.py
tests/integration/cli/: test_commands_integration.py  test_scaffold_quality.py
tests/unit/: __init__.py
tests/unit/cli/: test_commands.py  test_engine.py  test_install.py  test_main.py  test_more_commands.py  test_prompts.py
tools/dev/: check.py  generate_project_tree.py
(+228 files in other folders)
